--- a/AppFrontQrCode/app.json
+++ b/AppFrontQrCode/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template",
+    "name": "Appli QrCode",
     "slug": "AppFrontQrCode",
     "privacy": "public",
     "sdkVersion": "36.0.0",
