--- a/AppFrontQrCode/package.json
+++ b/AppFrontQrCode/package.json
@@ -16,8 +16,12 @@
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.2.2",
+    "react-navigation-stack": "^2.2.3",
+    "react-navigation-tabs": "^2.8.2"
   },
   "private": true
 }
