--- a/AppFrontQrCode/package.json
+++ b/AppFrontQrCode/package.json
@@ -8,20 +8,35 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
+    "@react-native-community/async-storage": "^1.8.1",
+    "@react-native-community/masked-view": "0.1.5",
     "axios": "^0.19.2",
-    "expo": "~36.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "bootstrap": "^4.4.1",
+    "expo": "^36.0.2",
+    "expo-font": "~8.0.0",
+    "formik": "^2.1.4",
+    "install": "^0.13.0",
+    "native-base": "^2.13.8",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-native": "0.61.5",
+    "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-paper": "^3.6.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation-tabs": "^2.8.2",
+    "yup": "^0.28.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.0.0",
-    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
-    "react-navigation-stack": "^2.2.3",
-    "react-navigation-tabs": "^2.8.2"
+    "react-navigation-stack": "^2.2.2"
   },
   "private": true
 }
